This is phplotdocs/ChangeLog, listing changes to the PHPlot Reference Manual
-----------------------------------------------------------------------------
Note: This is a more complete ChangeLog than the one in Appendix A of the
manual, which only contains summaries of changes.
-----------------------------------------------------------------------------
2011-05-26
   * concepts.xml: Fix bad indents in some programlisting blocks.

2011-05-23
   * concepts.xml: Explain new stackedbars plot behavior regarding zeros.

2011-05-21
   For feature request #3303654 "Force tick mark at specific value":
   * concepts.xml: Rewrite text on ticks and tick labels
   * developer.xml: Add to CalcTicks() description
   * examples.xml, examples/xtickanchor.php, examples/ytickanchor.php,
       examples/ytickanchor1.php: Add 2 new examples of tick anchors
   * functions.xml: Link to 2 new functions
   * reference.xml: Document 2 new functions, update others on ticks
   * variables.list: Add 2 new variables for tick anchors
   * Makefile: List new files, add missing dependency for example
   * examples/legendshape1.php: Clarify comment in example script

2011-05-15
   For feature request #3291155 "More flexible legend positioning":
   * advanced.xml: Rewrite text on legend position with multiple plots.
   * concepts.xml: Add definition of Relative Coordinates
   * developer.xml: Document changes to internals for SetLegendPosition
   * examples.xml: Add new example for SetLegendPosition
   * functions.xml: Link to new legend functions
   * main.xml: Reference future release PHPlot-5.4.0
   * reference.xml: Document new GetLegendSize, SetLegendPosition
   * variables.list: Document change to internal variables for legend position
   * Makefile: List new files
   * etc/legendpos.php: New script, generates images for new example.
   * images/legendpos*.png: 7 new images for new legend position example.
   * .ispell_words: Updated spelling list

2011-05-01